[package]
name = "tracehash-rs"
version = "0.2.0"
edition = "2021"
authors = ["Johan Henriksson <johan.henriksson@umu.se>"]
description = "Cross-language call/input/output hash tracing for algorithm parity checks"
license = "MIT"
repository = "https://github.com/henriksson-lab/tracehash"
readme = "README.md"
keywords = ["tracing", "hash", "parity", "debugging", "ffi"]
categories = ["development-tools::debugging", "development-tools::testing"]
include = [
    "src/**/*",
    "tests/**/*",
    "c/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE",
]

[features]
default = ["derive"]
derive = ["dep:tracehash-rs-derive"]
deep = ["dep:serde", "dep:serde_json", "dep:thiserror", "dep:rand", "dep:zstd"]

[lib]
name = "tracehash"
path = "src/lib.rs"

[[bin]]
name = "tracehash-compare"
path = "src/bin/tracehash-compare.rs"

[dependencies]
tracehash-rs-derive = { version = "0.2.0", path = "tracehash-rs-derive", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
thiserror = { version = "1", optional = true }
rand = { version = "0.8", optional = true }
zstd = { version = "0.13", optional = true }
